# words-on-anime-girls

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  words_on_anime_girls.json
deploy/: words-on-anime-girls-configmap.yml  words-on-anime-girls-pvc.yml  words-on-anime-girls.yml
src/: db.rs  main.rs  reddit.rs  webhook.rs
